@@ -1,15 +1,14 @@
-import locale
-
 from django import template
+from django.contrib.humanize.templatetags.humanize import intcomma
+from django.template.defaultfilters import floatformat
 from django.utils.timezone import datetime
 
-locale.setlocale(locale.LC_ALL, 'en_GB.UTF-8')
 register = template.Library()
 
 
 @register.filter()
 def currency(value):
-    return locale.currency(value, symbol=False, grouping=True)
+    return intcomma(floatformat(value, '-2'))
 
 
 @register.assignment_tag()
