@@ -1,5 +1,6 @@
 === ongoing (0.2.X - to be released as 0.3) ===
 
+- Replaced locale currency with intcomma and floatformat
 - Added payee overview and invoice balance
 - Prepared app for Django 1.9 and Python 3.5
 - Bugfix: Fall back to old currency histories if there's no current one
